@@ -5651,3 +5651,5 @@ v0.92.0.11:
   - Fix debt account conversion on servers that use TheNewEconomy.
   - Fix /n deposit [amount] [town] going into the specified town bank rather than the town bank of the depositor, courtesy of Momshroom with PR #4651.
   - Fix towns being able to go over the maximum residents, courtesy of Warriorrrr with PR #4650.
+  - Automatically add SHEARS to the global_town_settings.farm_plot_allow_blocks list in the config.
+    - Closes #4652.
